# nexus

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  TROUBLESHOOTING.md  justfile  rustfmt.toml
.github/actions/fetch-sui-cli/: action.yml
.github/workflows/: python.yml  talus-agentic-framework.yml
docker/: .env  README.md  containers.just  docker-compose-nollama.yaml  docker-compose.yaml  nexusctl.py
docker/nexus/: Dockerfile  compose.yaml
docker/ollama/: Dockerfile  compose.yaml
docker/sui/: .gitignore  Dockerfile  compose.yaml
docker/sui-network/: Dockerfile  compose.yaml  docker-compose.yaml
docker/sui-network/genesis/: Dockerfile
docker/sui-network/genesis/static/: client.yaml
docker/sui-network/package/: publish.sh
docker/sui/genesis/: .dockerignore  Dockerfile
e2e_tests/: .gitignore  Cargo.toml  README.md  oneclick-test.sh
e2e_tests/src/: completion.rs  main.rs  ollama_mock.rs  prelude.rs  prompt.rs  setup.rs
examples/: README.md  _config_template.py  _example_template.py  cli_cluster.py  event_planner.py  example.just  ig_post_planner.py  leftovers_chef.py  leftovers_chef_config.py  main.py  node_details.json  package-id.json  requirements.txt  sui.keystore  trip_planner.py
nexus_sdk/: README.md  pyproject.toml  requirements.txt  setup.py
nexus_sdk/src/nexus_sdk/: __init__.py  cluster.py  model.py  node.py  utils.py
offchain/: README.md
offchain/events/: .gitignore  README.md  pyproject.toml
offchain/events/src/nexus_events/: offchain.py  sui_event.py
offchain/tools/: .flake8  .gitignore  Modelfile  README.md  pyproject.toml
offchain/tools/src/nexus_tools/server/: main.py  security_api.py
offchain/tools/src/nexus_tools/server/controllers/: inference.py
offchain/tools/src/nexus_tools/server/crew/: talus_chat_ollama.py  talus_ollama.py
offchain/tools/src/nexus_tools/server/models/: agents.py  completion.py  error.py  extra_models.py  model.py  prompt.py
offchain/tools/src/nexus_tools/server/tools/: tools.py
offchain/tools/tests/: test_agent.py  test_default_api.py  test_ollama.py  test_tool.py
onchain/: Move.toml  README.md  Suibase.toml
onchain/sources/: agent.move  cluster.move  consts.move  model.move  node.move  prompt.move  task.move  tool.move
onchain/sources/tests/: cluster_tests.move  node_tests.move  prompt_tests.move
