[package]
name = "e2e_tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "e2e_tests_bin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", default-features = false, features = [
    "tokio",
    "http2",
] }
dotenvy = "0.15"
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dependencies.sui_sdk]
git = "https://github.com/mystenlabs/sui"
tag = "testnet-v1.26.1"
package = "sui-sdk"

[dependencies.sui_keys]
git = "https://github.com/mystenlabs/sui"
tag = "testnet-v1.26.1"
package = "sui-keys"
